--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-    background-image: url(../imagenes/ChatGPT\ Image\ 6\ jun\ 2025\,\ 12_57_31\ p.m..png)
+    background-image: url(ChatGPT\ Image\ 6\ jun\ 2025\,\ 12_57_31\ p.m..png)
 }
 canvas{
     border: 2px solid #000;
